<resources>
    <string name="app_name">Mjc_Design_Image</string>

    <string name="timesheet">Timesheet</string>
    <string name="form">Form</string>
    <string name="hierarchy">Hirarchy</string>
    <string name="more">More</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notification">Notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">Welcome Trail(TECH)</string>
    <string name="update">Last update at 17 Nov 2021</string>
    <string name="find">find WorkOrder</string>
    <string name="workorder">WorkOrder</string>
    <string name="filter1">Filter1</string>

    <string name="filter2">Filter2</string>
    <string name="process">In process</string>
    <string name="high">Very High Priority</string>
    <string name="low">Low Priority</string>
    <string name="medium">Medium Priority</string>
    <string name="rece">Received(9)</string>

    <string-array name="filter1">
        <item>filter1</item>
        <item>filter2</item>
        <item>filter3</item>
        <item>filter4</item>

    </string-array>

    <string-array name="filter2">
        <item>filter2</item>
        <item>filter3</item>
        <item>filter4</item>
        <item>filter5</item>

    </string-array>


</resources>