<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040C3A"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Text_Title"
                android:text="@string/welcome"/>

            <ImageView
                style="@style/ImageView"
                android:id="@+id/colud"
                android:layout_alignParentEnd="true"
                android:background="@drawable/background_design"
                android:src="@drawable/log_out" />

            <ImageView
                style="@style/ImageView"
                android:id="@+id/colud2"
                android:src="@drawable/cloud_3"
                android:background="@drawable/background_design"
                android:layout_toStartOf="@+id/colud"
                />

            <ImageView
                style="@style/ImageView"
                android:layout_toStartOf="@+id/colud2"
                android:background="@drawable/background_design"
                android:src="@drawable/cloud_4" />


        </RelativeLayout>
        <TextView
            style="@style/Normal_TextView"
            android:text="@string/update"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_margin="10dp"
                android:background="@drawable/background_design">



                <EditText
                    style="@style/Normal_TextView"
                    android:hint="@string/find"
                    android:layout_gravity="center"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/se_arch"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:layout_margin="10dp"
                android:background="@drawable/background_design">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:src="@drawable/sca_nner"/>


            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="145dp"
            app:cardCornerRadius="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    style="@style/Card_TextView"
                    android:text="@string/workorder"
                    android:textColor="#000000" />

                <ImageView
                    android:id="@+id/dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/drop_down" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:background="@drawable/back_filterdesign">

                    <TextView
                        android:id="@+id/filter1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/filter1"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/down_arrow1"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/drop_down" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:background="@drawable/back_filterdesign">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/filter2"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/down_arrow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/drop_down" />

                </RelativeLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Apply"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_color"
                android:layout_marginTop="95dp"
                android:text="Apply"
                android:textStyle="normal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>



        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rece"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="See more"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/custom_recyclerview"/>




    </LinearLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:id="@+id/BottomAppBar"
            app:fabCradleRoundedCornerRadius="20dp"
            app:fabCradleMargin="20dp"
            android:backgroundTint="#061361"
            tools:ignore="BottomAppBar" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:weightSum="2">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@drawable/time_sheet"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textColor="@color/white"

                        android:text="Timesheet"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"

                    android:weightSum="2">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="start"
                        android:background="@drawable/form_1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"

                        android:text="Form"/>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@drawable/hierarchy_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:text="Hierachy" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:weightSum="2">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="end"
                        android:background="@drawable/m_ore"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_gravity="end"
                        android:text="More"/>

                </LinearLayout>


            </LinearLayout>


        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab"
            android:backgroundTint="#061361"
            android:src="@drawable/add"
            app:layout_anchor="@id/BottomAppBar"/>




    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="45dp"
        android:src="@drawable/add"/>
</FrameLayout>

